WIP tp3.2, soucis de driver

--- a/lab3/dragon-tiger/src/ast/Makefile.am
+++ b/lab3/dragon-tiger/src/ast/Makefile.am
@@ -1,5 +1,5 @@
 noinst_LIBRARIES = libast.a
-libast_a_SOURCES = ast_dumper.cc binder.cc ast_dumper.hh binder.hh nodes.hh
+libast_a_SOURCES = ast_dumper.cc binder.cc ast_dumper.hh binder.hh nodes.hh type_checker.hh type_checker.cc
 AM_CXXFLAGS = -pedantic -Wall
 
 
